tests/src/frontend/typechecking/invalid/as_operator_runtime_error_4.sk
base class Foo
class A() extends Foo

fun main(): void {
  x = A();
  _ = x as Foo _
}
